Optimize Feed Upvote Api
Changes:
- Adjust constant factor in cost function
- Add VoteInfo to provide info like upvoteCount downVoteCount , Cost and reputations
- Enhance Feed Upvote Api with voteInfo embedded into response
- Add Script to generate lambda zip for Feed Upvote
- Add Lambda zip file for Feed Upvote into assets
- Updated Function that processes PostVoteRecord

--- a/internal/app/feed_attributes/BUILD.bazel
+++ b/internal/app/feed_attributes/BUILD.bazel
@@ -14,6 +14,7 @@ go_library(
         "reputation.go",
         "source.go",
         "verb.go",
+        "vote_info.go",
         "vote_type.go",
         "voter.go",
     ],
