Abstract Error Message and Optimize Apis
Changes:

- Abstract Error Messages to provide easy reference
- Add more lmabda zip scripts
- Add reputations insufficient amount when cosuming reputations
- Add RequestorVoteInfo and PostVoteInfo in Get_Feed_Post
- Fix suspending error for TX  with ROLLBACK added

--- a/cmd/lambda/feed_upvote/BUILD.bazel
+++ b/cmd/lambda/feed_upvote/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
     visibility = ["//visibility:private"],
     deps = [
         "//internal/app/feed_attributes:go_default_library",
+        "//internal/pkg/error_config:go_default_library",
         "//internal/platform/eth_config:go_default_library",
         "//internal/platform/postgres_config/client_config:go_default_library",
         "//internal/platform/postgres_config/post_votes_record_config:go_default_library",
