--- a/cmd/lambda/feed_events_table_creator/BUILD.bazel
+++ b/cmd/lambda/feed_events_table_creator/BUILD.bazel
@@ -6,14 +6,18 @@ go_library(
     importpath = "BigBang/cmd/lambda/feed_events_table_creator",
     visibility = ["//visibility:private"],
     deps = [
+        "//internal/platform/postgres_config/actor_profile_record_config:go_default_library",
         "//internal/platform/postgres_config/actor_reputations_record_config:go_default_library",
         "//internal/platform/postgres_config/client_config:go_default_library",
         "//internal/platform/postgres_config/post_config:go_default_library",
         "//internal/platform/postgres_config/post_replies_record_config:go_default_library",
         "//internal/platform/postgres_config/post_reputations_record_config:go_default_library",
         "//internal/platform/postgres_config/post_rewards_record_config:go_default_library",
+        "//internal/platform/postgres_config/post_votes_counters_record_config:go_default_library",
         "//internal/platform/postgres_config/post_votes_record_config:go_default_library",
+        "//internal/platform/postgres_config/purchase_reputations_record_config:go_default_library",
         "//internal/platform/postgres_config/reputations_refuel_record_config:go_default_library",
+        "//internal/platform/postgres_config/session_record_config:go_default_library",
         "//vendor/github.com/aws/aws-lambda-go/lambda:go_default_library",
     ],
 )
