--- a/cmd/lambda/get_feed_post/BUILD.bazel
+++ b/cmd/lambda/get_feed_post/BUILD.bazel
@@ -10,7 +10,9 @@ go_library(
         "//internal/platform/postgres_config/client_config:go_default_library",
         "//internal/platform/postgres_config/post_config:go_default_library",
         "//internal/platform/postgres_config/post_replies_record_config:go_default_library",
+        "//internal/platform/postgres_config/post_reputations_record_config:go_default_library",
         "//internal/platform/postgres_config/post_rewards_record_config:go_default_library",
+        "//internal/platform/postgres_config/post_votes_counters_record_config:go_default_library",
         "//vendor/github.com/aws/aws-lambda-go/lambda:go_default_library",
     ],
 )
