--- a/internal/platform/eth_config/BUILD.bazel
+++ b/internal/platform/eth_config/BUILD.bazel
@@ -19,6 +19,7 @@ go_library(
         "//internal/platform/postgres_config/post_config:go_default_library",
         "//internal/platform/postgres_config/post_replies_record_config:go_default_library",
         "//internal/platform/postgres_config/post_reputations_record_config:go_default_library",
+        "//internal/platform/postgres_config/post_votes_counters_record_config:go_default_library",
         "//internal/platform/postgres_config/post_votes_record_config:go_default_library",
         "//internal/platform/postgres_config/purchase_reputations_record_config:go_default_library",
         "//vendor/github.com/ethereum/go-ethereum:go_default_library",
