--- a/cmd/lambda/get_reputations/BUILD.bazel
+++ b/cmd/lambda/get_reputations/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
     importpath = "BigBang/cmd/lambda/get_reputations",
     visibility = ["//visibility:private"],
     deps = [
+        "//internal/pkg/error_config:go_default_library",
         "//internal/platform/postgres_config/actor_reputations_record_config:go_default_library",
         "//internal/platform/postgres_config/client_config:go_default_library",
         "//vendor/github.com/aws/aws-lambda-go/lambda:go_default_library",
