--- a/cmd/lambda/refuel_reputations/BUILD.bazel
+++ b/cmd/lambda/refuel_reputations/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
     visibility = ["//visibility:private"],
     deps = [
         "//internal/app/feed_attributes:go_default_library",
+        "//internal/pkg/error_config:go_default_library",
         "//internal/platform/postgres_config/actor_reputations_record_config:go_default_library",
         "//internal/platform/postgres_config/client_config:go_default_library",
         "//internal/platform/postgres_config/reputations_refuel_record_config:go_default_library",
