--- a/test/platform/postgres_config/actor_reputations_record_config/BUILD.bazel
+++ b/test/platform/postgres_config/actor_reputations_record_config/BUILD.bazel
@@ -6,7 +6,9 @@ go_library(
     importpath = "BigBang/test/platform/postgres_config/actor_reputations_record_config",
     visibility = ["//visibility:public"],
     deps = [
+        "//internal/app/feed_attributes:go_default_library",
         "//internal/pkg/error_config:go_default_library",
+        "//internal/platform/postgres_config/actor_reputations_record_config:go_default_library",
         "//internal/platform/postgres_config/client_config:go_default_library",
     ],
 )
