Add Foreign keys and Refactor error  message processing

--- a/cmd/lambda/get_session/BUILD.bazel
+++ b/cmd/lambda/get_session/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
     deps = [
         "//internal/pkg/error_config:go_default_library",
         "//internal/platform/postgres_config/client_config:go_default_library",
+        "//internal/platform/postgres_config/post_config:go_default_library",
         "//internal/platform/postgres_config/session_record_config:go_default_library",
         "//vendor/github.com/aws/aws-lambda-go/lambda:go_default_library",
     ],
