--- a/internal/pkg/error_config/BUILD.bazel
+++ b/internal/pkg/error_config/BUILD.bazel
@@ -6,7 +6,9 @@ go_library(
         "error_code.go",
         "error_data.go",
         "error_info.go",
+        "error_location.go",
         "error_message.go",
+        "error_ops.go",
     ],
     importpath = "BigBang/internal/pkg/error_config",
     visibility = ["//:__subpackages__"],
