--- a/cmd/lambda/attach_session/BUILD.bazel
+++ b/cmd/lambda/attach_session/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
         "//internal/pkg/error_config:go_default_library",
         "//internal/platform/getstream_config:go_default_library",
         "//internal/platform/postgres_config/client_config:go_default_library",
+        "//internal/platform/postgres_config/post_config:go_default_library",
         "//internal/platform/postgres_config/session_record_config:go_default_library",
         "//vendor/github.com/aws/aws-lambda-go/lambda:go_default_library",
         "//vendor/gopkg.in/GetStream/stream-go2.v1:go_default_library",
