--- a/cmd/lambda/get_feed_post/BUILD.bazel
+++ b/cmd/lambda/get_feed_post/BUILD.bazel
@@ -8,6 +8,8 @@ go_library(
     deps = [
         "//internal/app/feed_attributes:go_default_library",
         "//internal/pkg/error_config:go_default_library",
+        "//internal/platform/postgres_config/actor_profile_record_config:go_default_library",
+        "//internal/platform/postgres_config/actor_reputations_record_config:go_default_library",
         "//internal/platform/postgres_config/client_config:go_default_library",
         "//internal/platform/postgres_config/post_config:go_default_library",
         "//internal/platform/postgres_config/post_replies_record_config:go_default_library",
