--- a/internal/platform/eth_config/BUILD.bazel
+++ b/internal/platform/eth_config/BUILD.bazel
@@ -14,6 +14,7 @@ go_library(
         "//internal/app/feed_attributes:go_default_library",
         "//internal/pkg/utils:go_default_library",
         "//internal/platform/getstream_config:go_default_library",
+        "//internal/platform/postgres_config/actor_profile_record_config:go_default_library",
         "//internal/platform/postgres_config/actor_reputations_record_config:go_default_library",
         "//internal/platform/postgres_config/client_config:go_default_library",
         "//internal/platform/postgres_config/post_config:go_default_library",
