--- a/internal/platform/postgres_config/post_config/BUILD.bazel
+++ b/internal/platform/postgres_config/post_config/BUILD.bazel
@@ -12,6 +12,7 @@ go_library(
     visibility = ["//:__subpackages__"],
     deps = [
         "//internal/app/feed_attributes:go_default_library",
+        "//internal/pkg/error_config:go_default_library",
         "//internal/platform/postgres_config/client_config:go_default_library",
         "//vendor/github.com/jmoiron/sqlx/types:go_default_library",
     ],
