--- a/cmd/lambda/attach_session/BUILD.bazel
+++ b/cmd/lambda/attach_session/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
     deps = [
         "//internal/app/feed_attributes:go_default_library",
         "//internal/pkg/error_config:go_default_library",
+        "//internal/platform/eth_config:go_default_library",
         "//internal/platform/getstream_config:go_default_library",
         "//internal/platform/postgres_config/client_config:go_default_library",
         "//internal/platform/postgres_config/post_config:go_default_library",
