--- a/internal/app/feed_attributes/BUILD.bazel
+++ b/internal/app/feed_attributes/BUILD.bazel
@@ -9,6 +9,8 @@ go_library(
         "block_timestamp.go",
         "content.go",
         "feed_id.go",
+        "fuel.go",
+        "milestone_point.go",
         "object.go",
         "post_type.go",
         "reputation.go",
