--- a/test/pressure/BUILD.bazel
+++ b/test/pressure/BUILD.bazel
@@ -2,7 +2,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["test_pressure_for_profile.go"],
+    srcs = ["test_pressure.go"],
     importpath = "BigBang/test/pressure",
     visibility = ["//visibility:private"],
     deps = ["//internal/pkg/api:go_default_library"],
