--- a/cmd/lambda/get_batch_posts/BUILD.bazel
+++ b/cmd/lambda/get_batch_posts/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
@@ -8,6 +8,7 @@ go_library(
     deps = [
         "//internal/app/feed_attributes:go_default_library",
         "//internal/pkg/error_config:go_default_library",
+        "//internal/platform/postgres_config/actor_profile_record_config:go_default_library",
         "//internal/platform/postgres_config/client_config:go_default_library",
         "//internal/platform/postgres_config/post_config:go_default_library",
         "//internal/platform/postgres_config/post_replies_record_config:go_default_library",
@@ -17,7 +18,17 @@ go_library(
 )
 
 go_binary(
-    name = "get_feed_post",
+    name = "get_batch_posts",
     embed = [":go_default_library"],
     visibility = ["//visibility:public"],
+)
+
+go_test(
+    name = "go_default_test",
+    srcs = ["get_batch_posts_test.go"],
+    embed = [":go_default_library"],
+    deps = [
+        "//internal/app/feed_attributes:go_default_library",
+        "//vendor/github.com/stretchr/testify/assert:go_default_library",
+    ],
 )
