--- a/cmd/lambda/get_feed_post/BUILD.bazel
+++ b/cmd/lambda/get_feed_post/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
@@ -24,4 +24,14 @@ go_binary(
     name = "get_feed_post",
     embed = [":go_default_library"],
     visibility = ["//visibility:public"],
+)
+
+go_test(
+    name = "go_default_test",
+    srcs = ["get_feed_post_test.go"],
+    embed = [":go_default_library"],
+    deps = [
+        "//internal/app/feed_attributes:go_default_library",
+        "//vendor/github.com/stretchr/testify/assert:go_default_library",
+    ],
 )
