--- a/cmd/lambda/deactivate_actor/BUILD.bazel
+++ b/cmd/lambda/deactivate_actor/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
@@ -14,7 +14,14 @@ go_library(
 )
 
 go_binary(
-    name = "get_profile",
+    name = "deactivate_actor",
     embed = [":go_default_library"],
     visibility = ["//visibility:public"],
+)
+
+go_test(
+    name = "go_default_test",
+    srcs = ["deactivate_actor_test.go"],
+    embed = [":go_default_library"],
+    deps = ["//vendor/github.com/stretchr/testify/assert:go_default_library"],
 )
