--- a/cmd/lambda/feed_token_generator/BUILD.bazel
+++ b/cmd/lambda/feed_token_generator/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
@@ -7,6 +7,7 @@ go_library(
     visibility = ["//visibility:private"],
     deps = [
         "//internal/app/feed_attributes:go_default_library",
+        "//internal/pkg/error_config:go_default_library",
         "//vendor/github.com/aws/aws-lambda-go/lambda:go_default_library",
         "//vendor/gopkg.in/GetStream/stream-go2.v1:go_default_library",
     ],
@@ -16,4 +17,11 @@ go_binary(
     name = "feed_token_generator",
     embed = [":go_default_library"],
     visibility = ["//visibility:public"],
+)
+
+go_test(
+    name = "go_default_test",
+    srcs = ["feed_token_generator_test.go"],
+    embed = [":go_default_library"],
+    deps = ["//vendor/github.com/stretchr/testify/assert:go_default_library"],
 )
