--- a/cmd/lambda/feed_upvote/BUILD.bazel
+++ b/cmd/lambda/feed_upvote/BUILD.bazel
@@ -25,5 +25,9 @@ go_test(
     name = "go_default_test",
     srcs = ["feed_upvote_test.go"],
     embed = [":go_default_library"],
-    deps = ["//vendor/github.com/stretchr/testify/assert:go_default_library"],
+    deps = [
+        "//internal/app/feed_attributes:go_default_library",
+        "//internal/pkg/error_config:go_default_library",
+        "//vendor/github.com/stretchr/testify/assert:go_default_library",
+    ],
 )
