--- a/cmd/lambda/get_recent_votes/BUILD.bazel
+++ b/cmd/lambda/get_recent_votes/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
@@ -16,7 +16,17 @@ go_library(
 )
 
 go_binary(
-    name = "get_feed_post",
+    name = "get_recent_votes",
     embed = [":go_default_library"],
     visibility = ["//visibility:public"],
+)
+
+go_test(
+    name = "go_default_test",
+    srcs = ["get_recent_votes_test.go"],
+    embed = [":go_default_library"],
+    deps = [
+        "//internal/platform/postgres_config/post_votes_record_config:go_default_library",
+        "//vendor/github.com/stretchr/testify/assert:go_default_library",
+    ],
 )
