--- a/cmd/lambda/get_session/BUILD.bazel
+++ b/cmd/lambda/get_session/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
@@ -18,4 +18,15 @@ go_binary(
     name = "get_session",
     embed = [":go_default_library"],
     visibility = ["//visibility:public"],
+)
+
+go_test(
+    name = "go_default_test",
+    srcs = ["get_session_test.go"],
+    embed = [":go_default_library"],
+    deps = [
+        "//internal/app/feed_attributes:go_default_library",
+        "//internal/platform/postgres_config/session_record_config:go_default_library",
+        "//vendor/github.com/stretchr/testify/assert:go_default_library",
+    ],
 )
