--- a/cmd/lambda/profile/BUILD.bazel
+++ b/cmd/lambda/profile/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
         "//internal/platform/postgres_config/actor_profile_record_config:go_default_library",
         "//internal/platform/postgres_config/actor_rewards_info_record_config:go_default_library",
         "//internal/platform/postgres_config/client_config:go_default_library",
+        "//internal/platform/postgres_config/refuel_record_config:go_default_library",
         "//vendor/github.com/aws/aws-lambda-go/lambda:go_default_library",
     ],
 )
