--- a/cmd/lambda/refuel/BUILD.bazel
+++ b/cmd/lambda/refuel/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
@@ -17,7 +17,17 @@ go_library(
 )
 
 go_binary(
-    name = "refuel_reputations",
+    name = "refuel",
     embed = [":go_default_library"],
     visibility = ["//visibility:public"],
+)
+
+go_test(
+    name = "go_default_test",
+    srcs = ["refuel_test.go"],
+    embed = [":go_default_library"],
+    deps = [
+        "//internal/pkg/error_config:go_default_library",
+        "//vendor/github.com/stretchr/testify/assert:go_default_library",
+    ],
 )
