--- a/cmd/lambda/TCR/get_rating_vote_list/config/BUILD.bazel
+++ b/cmd/lambda/TCR/get_rating_vote_list/config/BUILD.bazel
@@ -2,13 +2,13 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
-    srcs = ["tcr_table_creator.go"],
-    importpath = "BigBang/cmd/lambda/TCR/tcr_table_creator/config",
+    srcs = ["get_rating_vote_list.go"],
+    importpath = "BigBang/cmd/lambda/TCR/get_rating_vote_list/config",
     visibility = ["//visibility:public"],
     deps = [
+        "//internal/app/tcr_attributes:go_default_library",
         "//internal/pkg/error_config:go_default_library",
-        "//internal/platform/postgres_config/TCR/project_config:go_default_library",
-        "//internal/platform/postgres_config/TCR/proxy_config:go_default_library",
+        "//internal/pkg/utils:go_default_library",
         "//internal/platform/postgres_config/TCR/rating_vote_config:go_default_library",
         "//internal/platform/postgres_config/client_config:go_default_library",
     ],
@@ -16,7 +16,11 @@ go_library(
 
 go_test(
     name = "go_default_test",
-    srcs = ["tcr_table_creator_test.go"],
+    srcs = ["get_rating_vote_list_test.go"],
     embed = [":go_default_library"],
-    deps = ["//vendor/github.com/stretchr/testify/assert:go_default_library"],
+    deps = [
+        "//internal/app/tcr_attributes:go_default_library",
+        "//internal/pkg/utils:go_default_library",
+        "//vendor/github.com/stretchr/testify/assert:go_default_library",
+    ],
 )
