refactor_project_postconfig

--- a/internal/platform/postgres_config/TCR/project_config/BUILD.bazel
+++ b/internal/platform/postgres_config/TCR/project_config/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
@@ -11,9 +11,18 @@ go_library(
     importpath = "BigBang/internal/platform/postgres_config/TCR/project_config",
     visibility = ["//:__subpackages__"],
     deps = [
-        "//internal/app/tcr_attributes:go_default_library",
         "//internal/pkg/error_config:go_default_library",
         "//internal/platform/postgres_config/client_config:go_default_library",
-        "//vendor/github.com/jmoiron/sqlx/types:go_default_library",
+    ],
+)
+
+go_test(
+    name = "go_default_test",
+    srcs = ["project_test.go"],
+    embed = [":go_default_library"],
+    deps = [
+        "//internal/pkg/error_config:go_default_library",
+        "//internal/platform/postgres_config/client_config:go_default_library",
+        "//vendor/github.com/stretchr/testify/suite:go_default_library",
     ],
 )
