--- a/cmd/lambda/TCR/get_project_list/config/BUILD.bazel
+++ b/cmd/lambda/TCR/get_project_list/config/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
+load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
@@ -6,21 +6,10 @@ go_library(
     importpath = "BigBang/cmd/lambda/TCR/get_project_list/config",
     visibility = ["//visibility:public"],
     deps = [
+        "//internal/app/tcr_attributes:go_default_library",
         "//internal/pkg/error_config:go_default_library",
         "//internal/pkg/utils:go_default_library",
         "//internal/platform/postgres_config/TCR/project_config:go_default_library",
         "//internal/platform/postgres_config/client_config:go_default_library",
-    ],
-)
-
-go_test(
-    name = "go_default_test",
-    srcs = ["get_project_list_test.go"],
-    embed = [":go_default_library"],
-    deps = [
-        "//internal/app/tcr_attributes:go_default_library",
-        "//internal/pkg/utils:go_default_library",
-        "//internal/platform/postgres_config/TCR/project_config:go_default_library",
-        "//vendor/github.com/stretchr/testify/assert:go_default_library",
     ],
 )
