--- a/cmd/lambda/TCR/project/config/BUILD.bazel
+++ b/cmd/lambda/TCR/project/config/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//internal/pkg/error_config:go_default_library",
+        "//internal/pkg/utils:go_default_library",
         "//internal/platform/postgres_config/TCR/project_config:go_default_library",
         "//internal/platform/postgres_config/client_config:go_default_library",
     ],
