--- a/test/constants/BUILD.bazel
+++ b/test/constants/BUILD.bazel
@@ -3,6 +3,6 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = ["project.go"],
-    importpath = "BigBang/test/contants",
+    importpath = "BigBang/test/constants",
     visibility = ["//visibility:public"],
 )
