--- a/test/lambda/TCR/get_project_list/BUILD.bazel
+++ b/test/lambda/TCR/get_project_list/BUILD.bazel
@@ -7,7 +7,7 @@ go_test(
         "//cmd/lambda/TCR/get_project_list/config:go_default_library",
         "//internal/app/tcr_attributes:go_default_library",
         "//internal/pkg/utils:go_default_library",
-        "//test/contants:go_default_library",
+        "//test/constants:go_default_library",
         "//vendor/github.com/stretchr/testify/assert:go_default_library",
     ],
 )
