Add lambada for objective - refactor schema with block_timestamp - add lambda and test for objective - add test constant files for objective

--- a/test/constants/BUILD.bazel
+++ b/test/constants/BUILD.bazel
@@ -2,7 +2,11 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["project.go"],
+    srcs = [
+        "milestone.go",
+        "objective.go",
+        "project.go",
+    ],
     importpath = "BigBang/test/constants",
     visibility = ["//visibility:public"],
 )
