--- a/cmd/lambda/TCR/tcr_table_creator/config/BUILD.bazel
+++ b/cmd/lambda/TCR/tcr_table_creator/config/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//internal/pkg/error_config:go_default_library",
+        "//internal/platform/postgres_config/TCR/milestone_config:go_default_library",
         "//internal/platform/postgres_config/TCR/objective_config:go_default_library",
         "//internal/platform/postgres_config/TCR/project_config:go_default_library",
         "//internal/platform/postgres_config/TCR/proxy_config:go_default_library",
