--- a/cmd/lambda/TCR/common/BUILD.bazel
+++ b/cmd/lambda/TCR/common/BUILD.bazel
@@ -2,13 +2,13 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["milestone.go"],
-    importpath = "BigBang/cmd/lambda/TCR/milestone/config",
+    srcs = ["common.go"],
+    importpath = "BigBang/cmd/lambda/TCR/common",
     visibility = ["//visibility:public"],
     deps = [
         "//internal/app/tcr_attributes:go_default_library",
-        "//internal/pkg/error_config:go_default_library",
         "//internal/platform/postgres_config/TCR/milestone_config:go_default_library",
+        "//internal/platform/postgres_config/TCR/objective_config:go_default_library",
         "//internal/platform/postgres_config/TCR/project_config:go_default_library",
         "//internal/platform/postgres_config/client_config:go_default_library",
     ],
