--- a/cmd/lambda/TCR/get_milestone/config/BUILD.bazel
+++ b/cmd/lambda/TCR/get_milestone/config/BUILD.bazel
@@ -6,10 +6,10 @@ go_library(
     importpath = "BigBang/cmd/lambda/TCR/get_milestone/config",
     visibility = ["//visibility:public"],
     deps = [
+        "//cmd/lambda/TCR/common:go_default_library",
         "//internal/app/tcr_attributes:go_default_library",
         "//internal/pkg/error_config:go_default_library",
         "//internal/platform/postgres_config/TCR/milestone_config:go_default_library",
-        "//internal/platform/postgres_config/TCR/objective_config:go_default_library",
         "//internal/platform/postgres_config/client_config:go_default_library",
     ],
 )
