--- a/cmd/lambda/TCR/get_project_list/config/BUILD.bazel
+++ b/cmd/lambda/TCR/get_project_list/config/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
     importpath = "BigBang/cmd/lambda/TCR/get_project_list/config",
     visibility = ["//visibility:public"],
     deps = [
+        "//cmd/lambda/TCR/common:go_default_library",
         "//internal/app/tcr_attributes:go_default_library",
         "//internal/pkg/error_config:go_default_library",
         "//internal/pkg/utils:go_default_library",
