add delete_milestone lambda

--- a/cmd/lambda/TCR/delete_milestone/config/BUILD.bazel
+++ b/cmd/lambda/TCR/delete_milestone/config/BUILD.bazel
@@ -2,13 +2,13 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["delete_objective.go"],
-    importpath = "BigBang/cmd/lambda/TCR/delete_objective/config",
+    srcs = ["delete_milestone.go"],
+    importpath = "BigBang/cmd/lambda/TCR/delete_milestone/config",
     visibility = ["//visibility:public"],
     deps = [
         "//internal/pkg/error_config:go_default_library",
         "//internal/platform/postgres_config/TCR/milestone_config:go_default_library",
-        "//internal/platform/postgres_config/TCR/objective_config:go_default_library",
+        "//internal/platform/postgres_config/TCR/project_config:go_default_library",
         "//internal/platform/postgres_config/client_config:go_default_library",
     ],
 )
