--- a/cmd/lambda/feed/feed_events_table_creator/config/BUILD.bazel
+++ b/cmd/lambda/feed/feed_events_table_creator/config/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
+load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
@@ -20,11 +20,4 @@ go_library(
         "//internal/platform/postgres_config/feed/refuel_record_config:go_default_library",
         "//internal/platform/postgres_config/feed/session_record_config:go_default_library",
     ],
-)
-
-go_test(
-    name = "go_default_test",
-    srcs = ["feed_events_table_creator_test.go"],
-    embed = [":go_default_library"],
-    deps = ["//vendor/github.com/stretchr/testify/assert:go_default_library"],
 )
