--- a/cmd/lambda/feed/profile/config/BUILD.bazel
+++ b/cmd/lambda/feed/profile/config/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
+load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
@@ -8,16 +8,10 @@ go_library(
     deps = [
         "//internal/app/feed_attributes:go_default_library",
         "//internal/pkg/error_config:go_default_library",
+        "//internal/platform/postgres_config/TCR/actor_rating_vote_account_config:go_default_library",
         "//internal/platform/postgres_config/client_config:go_default_library",
         "//internal/platform/postgres_config/feed/actor_profile_record_config:go_default_library",
         "//internal/platform/postgres_config/feed/actor_rewards_info_record_config:go_default_library",
         "//internal/platform/postgres_config/feed/refuel_record_config:go_default_library",
     ],
-)
-
-go_test(
-    name = "go_default_test",
-    srcs = ["profile_test.go"],
-    embed = [":go_default_library"],
-    deps = ["//vendor/github.com/stretchr/testify/assert:go_default_library"],
 )
