--- a/internal/platform/postgres_config/TCR/milestone_config/BUILD.bazel
+++ b/internal/platform/postgres_config/TCR/milestone_config/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
+load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
@@ -14,16 +14,5 @@ go_library(
         "//internal/app/tcr_attributes:go_default_library",
         "//internal/pkg/error_config:go_default_library",
         "//internal/platform/postgres_config/client_config:go_default_library",
-    ],
-)
-
-go_test(
-    name = "go_default_test",
-    srcs = ["milestone_test.go"],
-    embed = [":go_default_library"],
-    deps = [
-        "//internal/pkg/error_config:go_default_library",
-        "//internal/platform/postgres_config/client_config:go_default_library",
-        "//vendor/github.com/stretchr/testify/suite:go_default_library",
     ],
 )
