--- a/cmd/lambda/TCR/rating_vote/config/BUILD.bazel
+++ b/cmd/lambda/TCR/rating_vote/config/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
+load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
@@ -7,18 +7,9 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//internal/pkg/error_config:go_default_library",
+        "//internal/platform/postgres_config/TCR/objective_config:go_default_library",
         "//internal/platform/postgres_config/TCR/rating_vote_config:go_default_library",
         "//internal/platform/postgres_config/client_config:go_default_library",
-    ],
-)
-
-go_test(
-    name = "go_default_test",
-    srcs = ["rating_vote_test.go"],
-    embed = [":go_default_library"],
-    deps = [
-        "//internal/platform/postgres_config/TCR/rating_vote_config:go_default_library",
-        "//internal/platform/postgres_config/client_config:go_default_library",
-        "//vendor/github.com/stretchr/testify/assert:go_default_library",
+        "//internal/platform/postgres_config/feed/actor_profile_record_config:go_default_library",
     ],
 )
