--- a/cmd/lambda/TCR/rating_vote/config/BUILD.bazel
+++ b/cmd/lambda/TCR/rating_vote/config/BUILD.bazel
@@ -7,7 +7,9 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//internal/pkg/error_config:go_default_library",
+        "//internal/platform/postgres_config/TCR/milestone_config:go_default_library",
         "//internal/platform/postgres_config/TCR/objective_config:go_default_library",
+        "//internal/platform/postgres_config/TCR/project_config:go_default_library",
         "//internal/platform/postgres_config/TCR/rating_vote_config:go_default_library",
         "//internal/platform/postgres_config/client_config:go_default_library",
         "//internal/platform/postgres_config/feed/actor_profile_record_config:go_default_library",
