--- a/internal/app/tcr_attributes/BUILD.bazel
+++ b/internal/app/tcr_attributes/BUILD.bazel
@@ -6,8 +6,8 @@ go_library(
         "milestone.go",
         "milestone_info.go",
         "milestone_state.go",
-        "obj_vote_info.go",
         "objective.go",
+        "objective_votes_info.go",
         "project.go",
         "rating_vote.go",
     ],
