Update ProxyVotesInfo with DelegateVotes Info
Changes:
- refactored  actor_delegate_votes_account_ops
- refactors get_proxy_votes_list_by_principal lambda and tests
- refactored  proxy_votes and proxy_votes_info

--- a/cmd/lambda/TCR/get_proxy_votes_list_by_principal/config/BUILD.bazel
+++ b/cmd/lambda/TCR/get_proxy_votes_list_by_principal/config/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
         "//internal/app/tcr_attributes:go_default_library",
         "//internal/pkg/error_config:go_default_library",
         "//internal/pkg/utils:go_default_library",
+        "//internal/platform/postgres_config/TCR/actor_delegate_votes_account_config:go_default_library",
         "//internal/platform/postgres_config/TCR/principal_proxy_votes_config:go_default_library",
         "//internal/platform/postgres_config/TCR/project_config:go_default_library",
         "//internal/platform/postgres_config/client_config:go_default_library",
