add get_proxy_voting_info lambda
- refactored based on get_proxy_votes_list_by_principal

--- a/internal/app/tcr_attributes/BUILD.bazel
+++ b/internal/app/tcr_attributes/BUILD.bazel
@@ -9,8 +9,8 @@ go_library(
         "objective.go",
         "objective_votes_info.go",
         "project.go",
-        "proxy_votes.go",
-        "proxy_votes_info.go",
+        "proxy_voting.go",
+        "proxy_voting_info.go",
         "rating_vote.go",
     ],
     importpath = "BigBang/internal/app/tcr_attributes",
