--- a/internal/app/feed_attributes/BUILD.bazel
+++ b/internal/app/feed_attributes/BUILD.bazel
@@ -25,6 +25,7 @@ go_library(
     importpath = "BigBang/internal/app/feed_attributes",
     visibility = ["//:__subpackages__"],
     deps = [
+        "//internal/pkg/error_config:go_default_library",
         "//internal/pkg/utils:go_default_library",
         "//vendor/github.com/ethereum/go-ethereum/common:go_default_library",
         "//vendor/github.com/jmoiron/sqlx/types:go_default_library",
