--- a/internal/platform/postgres_config/feed/wallet_address_record_config/BUILD.bazel
+++ b/internal/platform/postgres_config/feed/wallet_address_record_config/BUILD.bazel
@@ -3,16 +3,12 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = [
-        "post_votes_record.go",
-        "post_votes_record_ops.go",
-        "post_votes_record_schema.go",
-        "post_votes_record_sql.go",
+        "wallet_address_record.go",
+        "wallet_address_record_ops.go",
+        "wallet_address_record_schema.go",
+        "wallet_address_record_sql.go",
     ],
-    importpath = "BigBang/internal/platform/postgres_config/feed/post_votes_record_config",
+    importpath = "BigBang/internal/platform/postgres_config/feed/wallet_address_record_config",
     visibility = ["//:__subpackages__"],
-    deps = [
-        "//internal/app/feed_attributes:go_default_library",
-        "//internal/pkg/error_config:go_default_library",
-        "//internal/platform/postgres_config/client_config:go_default_library",
-    ],
+    deps = ["//internal/platform/postgres_config/client_config:go_default_library"],
 )
