Add get_batch_finalized_validators API

--- a/internal/app/tcr_attributes/BUILD.bazel
+++ b/internal/app/tcr_attributes/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
         "milestone.go",
         "milestone_info.go",
         "milestone_state.go",
+        "milestone_validators_info.go",
         "objective.go",
         "objective_votes_info.go",
         "project.go",
