--- a/internal/app/feed_attributes/BUILD.bazel
+++ b/internal/app/feed_attributes/BUILD.bazel
@@ -12,8 +12,10 @@ go_library(
         "feed_id.go",
         "fuel.go",
         "milestone_point.go",
+        "milestone_points_redeem_request.go",
         "object.go",
         "post_type.go",
+        "redeem_block_info.go",
         "reputation.go",
         "rewards_info.go",
         "source.go",
