--- a/cmd/lambda/feed/feed_events_table_creator/config/BUILD.bazel
+++ b/cmd/lambda/feed/feed_events_table_creator/config/BUILD.bazel
@@ -11,12 +11,14 @@ go_library(
         "//internal/platform/postgres_config/feed/actor_profile_record_config:go_default_library",
         "//internal/platform/postgres_config/feed/actor_rewards_info_record_config:go_default_library",
         "//internal/platform/postgres_config/feed/actor_votes_counters_record_config:go_default_library",
+        "//internal/platform/postgres_config/feed/milestone_points_redeem_request_record_config:go_default_library",
         "//internal/platform/postgres_config/feed/post_config:go_default_library",
         "//internal/platform/postgres_config/feed/post_replies_record_config:go_default_library",
         "//internal/platform/postgres_config/feed/post_rewards_record_config:go_default_library",
         "//internal/platform/postgres_config/feed/post_votes_counters_record_config:go_default_library",
         "//internal/platform/postgres_config/feed/post_votes_record_config:go_default_library",
         "//internal/platform/postgres_config/feed/purchase_mps_record_config:go_default_library",
+        "//internal/platform/postgres_config/feed/redeem_block_info_record_config:go_default_library",
         "//internal/platform/postgres_config/feed/refuel_record_config:go_default_library",
         "//internal/platform/postgres_config/feed/session_record_config:go_default_library",
         "//internal/platform/postgres_config/feed/wallet_address_record_config:go_default_library",
