--- a/test/constants/BUILD.bazel
+++ b/test/constants/BUILD.bazel
@@ -5,6 +5,7 @@ go_library(
     srcs = [
         "activity.go",
         "milestone.go",
+        "milestone_points.go",
         "objective.go",
         "post.go",
         "profile.go",
@@ -15,5 +16,8 @@ go_library(
     ],
     importpath = "BigBang/test/constants",
     visibility = ["//visibility:public"],
-    deps = ["//internal/app/feed_attributes:go_default_library"],
+    deps = [
+        "//internal/app/feed_attributes:go_default_library",
+        "//vendor/github.com/ethereum/go-ethereum/common/math:go_default_library",
+    ],
 )
