Refactor Milstone points redeem system and  add ActorMilestonePointsRedeemHistoryRecord postgres

--- a/cmd/lambda/feed/feed_update_post_rewards/config/BUILD.bazel
+++ b/cmd/lambda/feed/feed_update_post_rewards/config/BUILD.bazel
@@ -10,5 +10,6 @@ go_library(
         "//internal/platform/getstream_config:go_default_library",
         "//internal/platform/postgres_config/client_config:go_default_library",
         "//internal/platform/postgres_config/feed/post_rewards_record_config:go_default_library",
+        "//internal/platform/postgres_config/feed/redeem_block_info_record_config:go_default_library",
     ],
 )
