Refactor Milestone Redeem Factor System

--- a/cmd/lambda/feed/feed_events_table_creator/config/BUILD.bazel
+++ b/cmd/lambda/feed/feed_events_table_creator/config/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
     deps = [
         "//internal/pkg/error_config:go_default_library",
         "//internal/platform/postgres_config/client_config:go_default_library",
+        "//internal/platform/postgres_config/feed/actor_milestone_points_redeem_history_record_config:go_default_library",
         "//internal/platform/postgres_config/feed/actor_profile_record_config:go_default_library",
         "//internal/platform/postgres_config/feed/actor_rewards_info_record_config:go_default_library",
         "//internal/platform/postgres_config/feed/actor_votes_counters_record_config:go_default_library",
