add get_redeem_block_info and set_token_pool lambda and tests

--- a/test/constants/BUILD.bazel
+++ b/test/constants/BUILD.bazel
@@ -12,6 +12,7 @@ go_library(
         "project.go",
         "proxy_votes.go",
         "rating_vote.go",
+        "token_pool.go",
         "wallet_address.go",
     ],
     importpath = "BigBang/test/constants",
