--- a/cmd/lambda/feed/unsubscribe_boards/package.json
+++ b/cmd/lambda/feed/unsubscribe_boards/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "getstream": "^3.22.0"
+    "getstream": "^3.22.0",
+    "knex": "^0.15.2",
+    "pg": "^7.6.1"
   }
 }
