--- a/test/lambda/TCR/batch_objectives/BUILD.bazel
+++ b/test/lambda/TCR/batch_objectives/BUILD.bazel
@@ -2,9 +2,9 @@ load("@io_bazel_rules_go//go:def.bzl", "go_test")
 
 go_test(
     name = "go_default_test",
-    srcs = ["feed_token_generator_test.go"],
+    srcs = ["batch_objectives_test.go"],
     deps = [
-        "//cmd/lambda/feed/feed_token_generator/config:go_default_library",
+        "//cmd/lambda/TCR/batch_objectives/config:go_default_library",
         "//test/constants:go_default_library",
         "//vendor/github.com/stretchr/testify/assert:go_default_library",
     ],
