optimize auth and added new api for get_validator_rencent_rating_vote_activities

--- a/internal/app/tcr_attributes/BUILD.bazel
+++ b/internal/app/tcr_attributes/BUILD.bazel
@@ -13,6 +13,7 @@ go_library(
         "proxy_voting.go",
         "proxy_voting_info.go",
         "rating_vote.go",
+        "rating_vote_activity.go",
     ],
     importpath = "BigBang/internal/app/tcr_attributes",
     visibility = ["//:__subpackages__"],
