migrations system optimization
- updated travis with soda config
- removed table creators for TCR and Feed due to existing migrations
- added clearTables ops for postgres tables
- added lambda function for clearing all tables with new migration components
- split ENV_TEMPLATE into ENV_COMMON_TEMPLATE and ENV_STAGE_TEMPLATE
- updated Integration test with migration components
- added init in redeem_block_info_records migration
- added created_at and update_at triggers in the migrations

--- a/.bazelrc
+++ b/.bazelrc
@@ -11,10 +11,11 @@ test:ci \
     --noshow_progress \
     --test_output=errors  \
     --action_env="AUTH_LEVEL" \
-    --action_env="DB_USER" \
-    --action_env="DB_PASSWORD" \
-    --action_env="DB_HOST" \
-    --action_env="DB_NAME" \
+    --action_env="ENV" \
+    --action_env="DB_USER_DEV" \
+    --action_env="DB_PASSWORD_DEV" \
+    --action_env="DB_HOST_DEV" \
+    --action_env="DB_NAME_DEV" \
     --action_env="STREAM_API_KEY" \
     --action_env="STREAM_API_SECRET" \
     --action_env="MuMaxFuel" \
